# Smart-Batch-Converter-PDF-Image-Processing-GUI

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml  test_core.py  test_jobs.py  test_processing.py
core/: image_handler.py  job_manager.py  pdf_handler.py  processing.py  utils.py
services/common/: __init__.py  logging.py
services/jobs/: __init__.py  models.py  service.py  storage.py  worker.py
services/processing/: __init__.py  engine.py  handlers.py  models.py  parallel.py  registry.py
tests/: conftest.py  test_core.py  test_jobs.py  test_processing.py
ui/: app.py
